cluster/system/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
      - grafana
