cluster/system/monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.feist-gondola.ts.net`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: tailscale
