cluster/system/monitoring/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.feist-gondola.ts.net`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
